# gamemaster

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
games/: Jewels Of Darkness Part 1 - Colossal Adventure (V3).l9  Jewels Of Darkness Part 2 - Adventure Quest (V3).l9  Jewels Of Darkness Part 3 - Dungeon Adventure (V3).l9  Knight Orc Part 1 (V4 - Amiga).l9  Knight Orc Part 1 (V4 - C64 Gfx).l9  Knight Orc Part 1 (V4 - PC).l9  Knight Orc Part 2 (V4 - Amiga).l9  Knight Orc Part 2 (V4 - C64 Gfx).l9  Knight Orc Part 2 (V4 - PC).l9  Knight Orc Part 3 (V4 - Amiga).l9  Knight Orc Part 3 (V4 - C64 Gfx).l9  Knight Orc Part 3 (V4 - PC).l9  Time & Magik Part 1 (Amiga).l9  Time & Magik Part 2 (Amiga).l9  Time & Magik Part 3 (Amiga).l9  guild_of_thieves.gfx  guild_of_thieves.mag
games/Knight Orc Graphics (Amiga)/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  4  5  6  7  8  9  read me  title
games/Knight Orc Graphics (C64)/: pic1  pic11  pic12  pic13  pic14  pic15  pic16  pic17  pic18  pic2  pic20  pic21  pic22  pic23  pic24  pic25  pic26  pic27  pic28  pic29  pic3  pic5  pic6  pic7  pic8  title mpic
games/Knight Orc Graphics (PC)/: 1.pic  10.pic  11.pic  12.pic  13.pic  14.pic  15.pic  16.pic  17.pic  18.pic  19.pic  2.pic  20.pic  21.pic  22.pic  23.pic  24.pic  25.pic  26.pic  27.pic  28.pic  29.pic  3.pic  30.pic  4.pic  5.pic  6.pic  7.pic  8.pic  9.pic
games/Time & Magic Graphics (Amiga)/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  24  25  26  27  28  29  3  31  4  5  6  7  8  9  read me  title
src/: draw.rs  game.rs  image_drawer.rs  image_widget.rs  main.rs  ui.rs
tools/: CMakeLists.txt
tools/Magnetic/: .clangd  CMakeLists.txt
tools/Magnetic/Talkie/: defs.h  main.c
tools/frotz/: .clangd  .gitignore  CMakeLists.txt
tools/frotz/src/blorb/: blorb.h  blorblib.c  blorblow.h
tools/frotz/src/common/: buffer.c  err.c  fastmem.c  files.c  frotz.h  getopt.c  hotkey.c  input.c  main.c  math.c  missing.c  missing.h  object.c  process.c  quetzal.c  random.c  redirect.c  screen.c  setup.h  sound.c  stream.c  table.c  text.c  unused.h  variable.c
tools/frotz/src/curses/: ux_audio.c  ux_audio.h  ux_audio_none.c  ux_audio_oss.c  ux_blorb.c  ux_blorb.h  ux_frotz.h  ux_init.c  ux_input.c  ux_pic.c  ux_screen.c  ux_sema.h  ux_setup.h  ux_text.c
tools/frotz/src/dos/: dosblorb.c  dosblorb.h  dosfrotz.h  dosinit.c  dosinput.c  dosmouse.c  dospic.c  dossampl.c  dosscrn.c  dostext.c  fontdata.h  inline.h
tools/frotz/src/dumb/: dblorb.c  dblorb.h  dfrotz.h  dinit.c  dinput.c  doutput.c  dpic.c
tools/frotz/src/sdl/: generic.c  generic.h  sf_deffont.c  sf_font3.c  sf_font3ttf.h  sf_fonts.c  sf_frotz.h  sf_ftype.c  sf_images.c  sf_msg_en.c  sf_osfdlg.c  sf_resource.c  sf_sig.c  sf_sound.c  sf_util.c  sf_video.c
tools/frotz/src/x11/: x_blorb.c  x_blorb.h  x_frotz.h  x_info.h  x_init.c  x_input.c  x_oldpic.c  x_pic.c  x_sample.c  x_screen.c  x_setup.h  x_text.c
tools/level9/: .clangd  CMakeLists.txt  talkie.c
