[package]
name = "gamemaster"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "io-util",
  "sync",
  "time",
] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
anyhow = "1"
regex = "1"
png = "0.17"
kittage = "0.4.0"
rustix = { version = "1.1.4", features = ["termios"] }
