[package]
name = "gamemaster"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
cmake = "0.1"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "io-util",
  "sync",
  "time",
] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
futures = "0.3"
anyhow = "1"
regex = "1"
png = "0.17"
kittage = "0.4.0"
rustix = { version = "1.1.4", features = ["termios"] }
fast_image_resize = "5"
image = "0.25.10"
color-eyre = "0.6.5"
textwrap = "0.16.2"
clap = { version = "4.6.1", features = ["derive"] }

[profile.release]
debug = true
force-frame-pointers = true
